Fix the title alignment.

--- a/packages/editor/src/components/post-card-panel/style.scss
+++ b/packages/editor/src/components/post-card-panel/style.scss
@@ -9,7 +9,6 @@
 		&.editor-post-card-panel__title {
 			@include heading-medium();
 			margin: 0;
-			padding: 2px 0;
 			display: flex;
 			align-items: center;
 			flex-wrap: wrap;
@@ -32,6 +31,10 @@
 
 	&.has-description &__header {
 		margin-bottom: $grid-unit-10;
+	}
+
+	.editor-post-card-panel__title-name {
+		padding: 2px 0;
 	}
 
 	.editor-post-card-panel__description {
